# learning_ros2

./: .gitmodules  DDS.md  README.md  python_node_template.py
scripts/: cpp_node_template.cpp
solutions/services_solution/src/my_cpp_pkg/: CMakeLists.txt  package.xml
solutions/services_solution/src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  my_first_node.cpp  number_counter.cpp  smartphone.cpp  template_cpp_node.cpp
solutions/services_solution/src/my_py_pkg/: setup.py
solutions/services_solution/src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  number_counter.py  number_publisher.py  robot_news_station.py  template_python_node.py
solutions/src/my_cpp_pkg/: CMakeLists.txt
solutions/src/my_cpp_pkg/src/: number_counter.cpp  number_publisher.cpp  robot_news_station.cpp
solutions/src/my_py_pkg/: package.xml  setup.py
solutions/src/my_py_pkg/my_py_pkg/: number_counter.py  smartphone.py
